Bug 620316 - Remove WrapEscapingClosure. r=brendan.